carreras en el home

--- a/src/app/dashboard/components/carreras/catalogo-carreras/catalogo-carreras.component.html
+++ b/src/app/dashboard/components/carreras/catalogo-carreras/catalogo-carreras.component.html
@@ -12,7 +12,7 @@
             </div>
             <div class="course-detail">
                 <h3
-                [routerLink]="'/carreras/detail/'+item.id+'/'+this.userId"
+                [routerLink]="'/carreras/detail/dash/'+item.id+'/'+this.userId"
                 ><a>{{ item.nombre }}</a></h3>
                 <div class="ranking">
                     <star-rating 
