--- a/src/app/home/components/main/main.component.html
+++ b/src/app/home/components/main/main.component.html
@@ -1,7 +1,7 @@
 <main>
     <app-hero></app-hero>
     <app-courses id="cursos"></app-courses>
-    <!-- <app-careers id="carreras"></app-careers> -->
+    <app-careers id="carreras"></app-careers>
     <div class="anuncios">
         <h2>Novedades</h2>
         <app-carousel></app-carousel>
